# wgpu-pathtracer

./: .gitignore  Cargo.toml  README.md  build.rs
.cargo/: config.toml
lib/image_dds-dynamic/: Cargo.toml
lib/image_dds-dynamic/src/: lib.rs
lib/oidn-dynamic/: Cargo.toml
lib/oidn-dynamic/src/: lib.rs
lib/oidn-wgpu-interop-dynamic/: Cargo.toml
lib/oidn-wgpu-interop-dynamic/src/: lib.rs
res/: cornell_box.mtl  cornell_box_pbr.mtl  dragon.mtl  glass_cube.mtl  walmart_cornell_box.mtl
res/bistro/: bistro.mtl
res/classroom/: classroom.mtl
res/fireplace_room/: fireplace_room.mtl
res/knob/: mitsuba.mtl
res/living_room/: living_room.mtl
res/minecraft/: minecraft.mtl
res/normal_mapping/: normal_mapping.mtl
res/salle_de_bain/: salle_de_bain.mtl
res/san_miguel/: san-miguel.mtl
res/sports_car/: sportsCar.mtl
res/transmission_test/: transmission_test.mtl
res/window_room/: window_room.blend  window_room.blend1  window_room.mtl
src/: camera.rs  main.rs  raytracer.rs  scene.rs  shader.rs  texture.rs  uniforms.rs  wgpu_buffer.rs  wgpu_util.rs  window.rs
src/render_steps/: bdpt.rs  blit.rs  denoise.rs  mod.rs  pt.rs  rayproject.rs  rt.rs
src/shaders/: blit.wgsl  brdf.wgsl  brdf.wgsl.bak  bsdf.wgsl  color.wgsl  helpers.wgsl  mod.rs  preprocessor.txt  random.wgsl  rayproject.wgsl  raytracing.wgsl  restir_di.wgsl  shader_definitions.rs  shader_main.wgsl  shader_resources.wgsl  sky.wgsl  uniforms.wgsl
src/shaders/blit/: blit.wgsl
src/shaders/common/: bsdf.wgsl  helpers.wgsl  random.wgsl  sky.wgsl
src/shaders/pathtracer/: pathtracer.wgsl
src/shaders/pathtracer/common/: rt_helpers.wgsl  shader_resources.wgsl
src/shaders/pathtracer/pathtracer/: pathtracer.wgsl  restir_di.wgsl
src/shaders/pathtracer_bidirectional/: pathtracer_bidirectional.wgsl
src/shaders/pathtracer_bidirectional/common/: shader_resources.wgsl
src/shaders/pathtracer_bidirectional/pathtracer_bidirectional/: bdpt.wgsl
src/shaders/rayproject/: rayproject.wgsl
wgsl_preprocessor/: Cargo.toml
wgsl_preprocessor/src/: lib.rs
