[package]
name = "wgpu-pathtracer"
version = "0.1.0"
edition = "2024"

[patch.crates-io]
wgpu = { git = "https://github.com/gamingdoom/wgpu.git", version = "25.0.0" }

[dependencies]
bytemuck = "1.22.0"
env_logger = "0.11.8"
glam = "0.30.1"
log = "0.4.27"
pollster = "0.4.0"
tobj = "4.0.3"
wgpu = { version = "25.0.0", features = ["spirv", "glsl"] }
wgsl_preprocessor = { path = "./wgsl_preprocessor" }
image = "0.25.6"
ash = "0.38.0"
image_dds = { version = "0.7.2" }
wgpu-profiler = "0.23.0"
profiling = "1.0.16"
inline-spirv = "0.2.1"
jit-spirv = "0.1.1"
sdl3 = { version = "0.14.27", features = ["raw-window-handle"] }
num_cpus = "1.16.0"
oidn = "2.3.2"

[build-dependencies]
wgsl_preprocessor = { path = "./wgsl_preprocessor" }
