cargo-features = ["profile-rustflags"]

[package]
name = "wgpu-pathtracer"
version = "0.1.0"
edition = "2024"

[patch.crates-io]
wgpu = { git = "https://github.com/gamingdoom/wgpu.git", version = "25.0.0" }
oidn = { version = "2.3.2", git = "https://github.com/gamingdoom/oidn-rs.git" }

[dependencies]
bytemuck = "1.22.0"
env_logger = "0.11.8"
glam = "0.30.1"
log = "0.4.27"
pollster = "0.4.0"
tobj = "4.0.3"
wgpu = { version = "25.0.0", features = ["spirv", "glsl"] }
wgsl_preprocessor = { path = "./wgsl_preprocessor" }
image = "0.25.6"
ash = "0.38.0"
#image_dds = { version = "0.7.2" }
wgpu-profiler = "0.23.0"
profiling = "1.0.16"
inline-spirv = "0.2.1"
jit-spirv = "0.1.1"
sdl3 = { version = "0.14.27", features = ["raw-window-handle"] }
num_cpus = "1.16.0"
image_dds = { version = "0.1.0", path = "lib/image_dds-dynamic", package = "image_dds-dynamic" }
prefer-dynamic2 = { version = "0.2.1", git = "https://github.com/Kijewski/prefer-dynamic2.git" }
oidn-wgpu-interop = { version = "0.1.1", git = "https://github.com/gamingdoom/oidn-wgpu-interop.git" }
oidn = "2.3.2"

[build-dependencies]
wgsl_preprocessor = { path = "./wgsl_preprocessor" }

[profile.dev]
rpath = true
rustflags = [
    "-Z", "linker-features=-lld",
    "-C", "prefer-dynamic=yes",
    "-C", "rpath"
]

[profile.release]
rpath = true
rustflags = [
    "-Z", "linker-features=-lld",
    "-C", "prefer-dynamic=yes",
    "-C", "rpath"
]

