cargo-features = ["profile-rustflags"]

[package]
name = "oidn-wgpu-interop-dynamic"
version = "0.1.0"
edition = "2024"

[dependencies]
oidn-wgpu-interop = { version = "0.1.1", git = "https://github.com/gamingdoom/oidn-wgpu-interop.git" }

[lib]
crate-type = ["dylib"]

[profile.dev]
rpath = true
rustflags = [
    "-Z", "linker-features=-lld",
    "-C", "prefer-dynamic=yes",
    "-C", "rpath"
]

[profile.release]
#rpath = true
rustflags = [
    "-Z", "linker-features=+lld",
    "-C", "prefer-dynamic=yes",
#    "-C", "rpath"
]
